# narpyn

./: .gitignore  .gitmodules  README.md  build_ona.sh  build_package.sh  hatch.toml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
narpyn/ona/: nar.py  narsese.py
narpyn/ona/NAR/: __init__.py
tests/: test_nar.py  test_narsese.py
tests/ona/: test_nar.py  test_narsese.py
