[tool.poetry]
name = "narpyn"
version = "0.1.0"
description = "A Python API library for NARS"
authors = ["Adrian Borucki <ab@synthillect.ai>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "narpyn"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.270"
pytest = "^7.3.1"
ipython = "^8.14.0"

[project]
name = "narpyn"
dynamic = ["version"]
description = "A Python API library for NARS"
authors = [{name = "Adrian Borucki", email = "ab@synthillect.ai"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling>=1.17.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
artifacts = [
    "*.so",
    "*.dll",
    "/ona/NAR",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/ona/misc",
  "/ona/*.py",
]

[tool.hatch.build.targets.wheel]
pure_python = false
exclude = [
  "/ona/misc",
  "/ona/*.py",
  "/tests",
]

[tool.hatch.build.targets.wheel.hooks.autorun]
dependencies = ["hatch-autorun"]
code = """
os.environ["NARS_HOME"] = os.path.dirname(os.path.abspath(__file__)) + "/ona"
"""

[tool.hatch.build.targets.wheel.hooks.mypyc]
enable-by-default = false
dependencies = ["hatch-mypyc>=0.14.1"]
require-runtime-dependencies = true
mypy-args = [
  "--no-warn-unused-ignores",
]

[tool.ruff.isort]
known-first-party = ["narpyn"]

[terminal.styles]
spinner = "dots"

[tool.coverage.run]
source_pkgs = ["narpyn", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
narpyn = ["narpyn", "*/narpyn/narpyn"]
tests = ["tests", "*/narpyn/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.cibuildwheel]
before-build = "./build_ona.sh"
